--- a/eks-cross-cluster/datastore.yaml
+++ b/eks-cross-cluster/datastore.yaml
@@ -153,6 +153,39 @@ spec:
             timeoutSeconds: 1
             periodSeconds: 10
             failureThreshold: 3      
+  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: datastore-v1-svc
+  namespace: apps
+spec:
+  sessionAffinity: None
+  type: ClusterIP  
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 3000
+  selector:
+    app: datastore
+    role: database-service  
+    version: v1
 
-  
-  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: datastore-v2-svc
+  namespace: apps
+spec:
+  sessionAffinity: None
+  type: ClusterIP  
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 3000
+  selector:
+    app: datastore
+    role: database-service  
+    version: v2     
