--- a/eks-cross-cluster/frontend-auth.yaml
+++ b/eks-cross-cluster/frontend-auth.yaml
@@ -18,7 +18,10 @@ spec:
         sidecar.aws.signing-proxy/host: "datastore.sarathy.io"
         sidecar.aws.signing-proxy/name: "vpc-lattice-svcs"
         sidecar.aws.signing-proxy/region: "us-west-2"
-        #sidecar.aws.signing-proxy/unsigned-payload: "true"        
+        sidecar.aws.signing-proxy/unsigned-payload: "true"    
+        #
+        # If you have enabled SSL/TLS for the destination Lattice service, you must use HTTPS here. Othersie, use HTTP
+        #
         sidecar.aws.signing-proxy/scheme: "HTTPS"        
     spec: 
       serviceAccountName: aws-sigv4-client
