--- a/eks-cross-cluster/ingress-frontend.yaml
+++ b/eks-cross-cluster/ingress-frontend.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   ingressClassName: awslb-store
   rules:
-    - host: frontend-eks.lattice.sarathy.io
+    - host: frontend-eks.lattice.io
       http:
         paths:
           - path: /popular
