--- a/eks-cross-cluster/frontend-auth.yaml
+++ b/eks-cross-cluster/frontend-auth.yaml
@@ -26,7 +26,7 @@ spec:
         #
         # If you have enabled SSL/TLS for the destination Lattice service, you must use HTTPS here. Othersie, use HTTP
         #
-        sidecar.aws.signing-proxy/scheme: "HTTPS"        
+        sidecar.aws.signing-proxy/upstream-url-scheme: "HTTPS"     
     spec: 
       serviceAccountName: aws-sigv4-client
       containers:          
