adds Gateway namespace to HTTPRoute

--- a/eks-cross-cluster/route-datastore-canary-custom-tls.yaml
+++ b/eks-cross-cluster/route-datastore-canary-custom-tls.yaml
@@ -10,6 +10,7 @@ spec:
   parentRefs:
   - name: eks-lattice-network
     sectionName: tls-with-custom-domain
+    namespace: default
   rules:  
   - backendRefs:  
     - name: datastore-v1-svc
