--- a/eks-cross-cluster/route-datastore-canary-default-tls.yaml
+++ b/eks-cross-cluster/route-datastore-canary-default-tls.yaml
@@ -8,6 +8,7 @@ spec:
   parentRefs:
   - name: eks-lattice-network
     sectionName: tls-with-default-domain 
+    namespace: default
   rules:  
   - backendRefs:  
     - name: datastore-v1-svc
